refactor: 将模块相关的配置属性类移至对应模块中