@@ -2,14 +2,13 @@ package net.risesoft.y9public.controller;
 
 import java.io.File;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
-import jakarta.annotation.PostConstruct;
 import jakarta.servlet.ServletOutputStream;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 
 import org.apache.commons.io.FileUtils;
-import org.springframework.core.env.Environment;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -21,6 +20,7 @@ import org.springframework.web.multipart.MultipartFile;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
+import net.risesoft.Y9FileManagerProperties;
 import net.risesoft.y9public.entity.Y9FileStore;
 import net.risesoft.y9public.repository.Y9FileStoreRepository;
 
@@ -29,17 +29,15 @@ import net.risesoft.y9public.repository.Y9FileStoreRepository;
 @RequiredArgsConstructor
 public class Y9FileController {
 
-    private String fileStoreRoot = "d:/y9config/y9filestore";
-
     private final Y9FileStoreRepository fileRepository;
 
-    private final Environment environment;
+    private final Y9FileManagerProperties y9FileManagerProperties;
 
     @RequestMapping(value = "/rest/deleteFile")
     @ResponseBody
     public String deleteFile(String fullPath, String fileName, HttpServletResponse response) throws Exception {
         try {
-            File path = new File(this.fileStoreRoot + fullPath);
+            File path = new File(y9FileManagerProperties.getFileRoot() + fullPath);
             path.mkdirs();
             File file = new File(path, fileName);
             if (file.exists()) {
@@ -55,13 +53,13 @@ public class Y9FileController {
 
     @RequestMapping(value = "/s/{realStoreFileName}")
     public void download(@PathVariable String realStoreFileName, HttpServletRequest request,
-                         HttpServletResponse response) throws Exception {
+        HttpServletResponse response) throws Exception {
         downloadFile(realStoreFileName, request, response);
     }
 
     @RequestMapping(value = "/s")
     public void download2(@RequestParam String realStoreFileName, HttpServletRequest request,
-                          HttpServletResponse response) throws Exception {
+        HttpServletResponse response) throws Exception {
         downloadFile(realStoreFileName, request, response);
     }
 
@@ -74,7 +72,7 @@ public class Y9FileController {
      */
     @RequestMapping(value = "/file/{realStoreFileName}")
     public void downloadFile(@PathVariable String realStoreFileName, HttpServletRequest request,
-                             HttpServletResponse response) throws Exception {
+        HttpServletResponse response) throws Exception {
         ServletOutputStream out = response.getOutputStream();
         try {
             String id = realStoreFileName;
@@ -87,14 +85,14 @@ public class Y9FileController {
                 String fileName = f.getFileName();
                 String fullPath = f.getFullPath();
 
-                File file = new File(this.fileStoreRoot + fullPath + "/" + f.getRealFileName());
+                File file = new File(y9FileManagerProperties.getFileRoot() + fullPath + "/" + f.getRealFileName());
                 if (file.exists()) {
                     String userAgent = request.getHeader("User-Agent");
                     if (userAgent.contains("MSIE") || userAgent.contains("Trident")) {
-                        fileName = URLEncoder.encode(fileName, "UTF-8");
+                        fileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8);
                         fileName = fileName.replaceAll("\\+", "%20");
                     } else {
-                        fileName = new String(fileName.getBytes("UTF-8"), "ISO8859-1");
+                        fileName = new String(fileName.getBytes(StandardCharsets.UTF_8), "ISO8859-1");
                     }
 
                     response.reset();
@@ -110,13 +108,13 @@ public class Y9FileController {
 
             response.reset();
             String err = "文件不存在或路径不正确";
-            out.write(err.getBytes("UTF-8"));
+            out.write(err.getBytes(StandardCharsets.UTF_8));
         } catch (Exception e) {
             e.printStackTrace();
 
             response.reset();
             String err = "错误信息：" + e.getMessage();
-            out.write(err.getBytes("UTF-8"));
+            out.write(err.getBytes(StandardCharsets.UTF_8));
         } finally {
             out.flush();
             out.close();
@@ -125,35 +123,30 @@ public class Y9FileController {
 
     @RequestMapping(value = "/files")
     public void downloadFile2(@RequestParam String realStoreFileName, HttpServletRequest request,
-                              HttpServletResponse response) throws Exception {
+        HttpServletResponse response) throws Exception {
         downloadFile(realStoreFileName, request, response);
     }
 
     @RequestMapping(value = "/files/{realStoreFileName}")
     public void downloadFiles(@PathVariable String realStoreFileName, HttpServletRequest request,
-                              HttpServletResponse response) throws Exception {
+        HttpServletResponse response) throws Exception {
         download(realStoreFileName, request, response);
-    }
-
-    @PostConstruct
-    public void init() {
-        this.fileStoreRoot = environment.getProperty("y9.app.fileManager.fileRoot", "d:/y9config/y9filestore");
     }
 
     @RequestMapping(value = "/rest/retrieveFileStream")
     public void retrieveFileStream(String fullPath, String fileName, HttpServletRequest request,
-                                   HttpServletResponse response) throws Exception {
+        HttpServletResponse response) throws Exception {
         ServletOutputStream out = response.getOutputStream();
         try {
-            File path = new File(this.fileStoreRoot + fullPath);
+            File path = new File(y9FileManagerProperties.getFileRoot() + fullPath);
             File file = new File(path, fileName);
             if (file.exists()) {
                 String userAgent = request.getHeader("User-Agent");
                 if (userAgent.contains("MSIE") || userAgent.contains("Trident")) {
-                    fileName = URLEncoder.encode(fileName, "UTF-8");
+                    fileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8);
                     fileName = fileName.replaceAll("\\+", "%20");
                 } else {
-                    fileName = new String(fileName.getBytes("UTF-8"), "ISO8859-1");
+                    fileName = new String(fileName.getBytes(StandardCharsets.UTF_8), "ISO8859-1");
                 }
 
                 response.reset();
@@ -176,7 +169,7 @@ public class Y9FileController {
     @ResponseBody
     public String storeFile(MultipartFile multipartFile, String fullPath, String fileName) throws Exception {
         try {
-            File path = new File(this.fileStoreRoot + fullPath);
+            File path = new File(y9FileManagerProperties.getFileRoot() + fullPath);
             path.mkdirs();
             File file = new File(path, fileName);
             multipartFile.transferTo(file);
